# DamageLogger

./: Cargo.toml  LICENSE  MANIFEST.md  README.md  build.rs  hotfix_update.bat  major_update.bat  minor_update.bat  references.md  revision_update.bat
assets/: battle_timeline.css  battle_timeline.html  battle_timeline.js  index.html
docs/: API.md
locales/: v2.yml
src/: battle.rs  entry.rs  kreide.rs  lib.rs  logging.rs  models.rs  overlay.rs  server.rs  subscribers.rs  ui.rs
src/kreide/: functions.rs  helpers.rs  native_types.rs  statics.rs  types.rs
src/kreide/il2cpp/: api.rs  misc.rs  mod.rs  native.rs  util.rs
src/models/: events.rs  misc.rs  packets.rs
src/server/: index.html  socket_manager.rs
src/subscribers/: battle.rs  directx.rs  handle_hp_change.rs  on_battle_begin.rs  on_battle_end.rs  on_combo.rs  on_damage.rs  on_direct_change_hp.rs  on_direct_damage_hp.rs  on_entity_defeated.rs  on_initialize_enemy.rs  on_set_lineup.rs  on_stat_change.rs  on_turn_begin.rs  on_turn_end.rs  on_update_cycle.rs  on_update_team_formation.rs  on_update_wave.rs  on_use_skill.rs
src/ui/: app.rs  helpers.rs  widgets.rs
src/ui/core/: helpers.rs
